Fix navbar on mobile

--- a/Throneteki.Web/clientapp/src/components/Navigation/Navigation.scss
+++ b/Throneteki.Web/clientapp/src/components/Navigation/Navigation.scss
@@ -11,16 +11,3 @@
     padding: 0 15px;
     line-height: $navbar-height;
 }
-
-.navbar-brand {
-    background-image: url('~assets/img/header_icon.png');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain;
-    width: 32px;
-    height: 120%;
-}
-
-.nav-link {
-    line-height: $navbar-height;
-}
